Added mock-pokemons and implementation of OnInit

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
   </head>
 
   <body>
-    <pokemon-app>Loading AppComponent content here ...</pokemon-app>
+    <pokemon-app></pokemon-app>
   </body>
 </html>
