Add event reaction (keyup, keyup.enter, blur) and play with #box html local variable

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
   </head>
 
   <body>
-    <pokemon-app></pokemon-app>
+    <pokemon-app>Loading application.....</pokemon-app>
   </body>
 </html>
