Added Routing => hierarchy is app-component (parent) -> 2 children list-pokemon + detail-pokemon. Added NgModule for Rooting...

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base href="/">
     <title>Application de Pokémons</title>
     <base href="/">
     <meta charset="UTF-8">
