--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
   </head>
 
   <body>
-    <pokemon-app>Loading application.....</pokemon-app>
+    <!-- <pokemon-app>Loading application.....</pokemon-app> -->
+    <pokemon-app></pokemon-app>
   </body>
 </html>
